--- a/roles/abm-install/templates/cluster-config.yaml.j2
+++ b/roles/abm-install/templates/cluster-config.yaml.j2
@@ -83,7 +83,7 @@ spec:
     # Node pool configuration is only valid for 'bundled' LB mode.
     # nodePoolSpec:
       # nodes:
-      #- address: {{ services_1_cidr }}
+      #- address: {{ services_cidr }}
   # Proxy configuration
   # proxy:
   #   url: http://[username:password@]domain
