--- a/roles/abm-software/templates/config-management.yaml.j2
+++ b/roles/abm-software/templates/config-management.yaml.j2
@@ -2,10 +2,10 @@ apiVersion: configmanagement.gke.io/v1
 kind: ConfigManagement
 metadata:
   name: config-management
+  namespace: config-management-system
 spec:
-  clusterName: my-cluster
-  git:
-    syncRepo: {{ root-sync }}
-    syncBranch: 1.0.0
-    secretType: none
-    policyDir: "foo-corp"
+  enableMultiRepo: true
+  # Unique across all clusters using the same ConfigSync repo. Name is used in Cluster Selectors
+  clusterName: {{ cluster_name }}
+  policyController:
+    enabled: true
