setting token to pull from default namespace cluster reader

--- a/roles/abm-software/templates/config-management.yaml.j2
+++ b/roles/abm-software/templates/config-management.yaml.j2
@@ -8,4 +8,7 @@ spec:
   clusterName: {{ cluster_name }}
   enableMultiRepo: true
   policyController:
-    enabled: true
+    enabled: false
+    # exemptableNamespaces: ["default"]
+    logDeniesEnabled: true
+    templateLibraryInstalled: false
