--- a/roles/abm-install/templates/cluster-config.yaml.j2
+++ b/roles/abm-install/templates/cluster-config.yaml.j2
@@ -118,7 +118,7 @@ spec:
     lvpShare:
       # path specifies the host machine path where subdirectories will be created on each host. A local PV
       # will be created for each subdirectory.
-      path: /opt/localpv-share
+      path: {{ local_share_pvc_mount }}
       # storageClassName specifies the StorageClass that PVs will be created with. The StorageClass
       # is created during cluster creation.
       storageClassName: local-shared
@@ -132,13 +132,13 @@ spec:
       maxPodsPerNode: 110
     # containerRuntime specifies which container runtime to use for scheduling containers on nodes.
     # containerd and docker are supported. #TODO: Look at containerd for this
-    containerRuntime: docker
+    containerRuntime: {{ container_runtime }}
   # KubeVirt configuration, uncomment this section if you want to install kubevirt to the cluster
-  # kubevirt:
+  kubevirt:
   #   # if useEmulation is enabled, hardware accelerator (i.e relies on cpu feature like vmx or svm)
   #   # will not be attempted. QEMU will be used for software emulation.
   #   # useEmulation must be specified for KubeVirt installation
-  #   useEmulation: false
+    useEmulation: false
 
   # Authentication; uncomment this section if you wish to enable authentication to the cluster with OpenID Connect.
   # authentication:
