--- a/roles/abm-software/templates/longhorn-default-setting.yml.j2
+++ b/roles/abm-software/templates/longhorn-default-setting.yml.j2
@@ -15,7 +15,7 @@ data:
     backup-target-credential-secret: gcp-cloud-storage-backup-secret
     allow-recurring-job-while-volume-detached:
     create-default-disk-labeled-nodes:
-    default-data-path:
+    default-data-path: /customer
     replica-soft-anti-affinity:
     storage-over-provisioning-percentage:
     storage-minimal-available-percentage:
