Resolve "Add Gateway Connect for remote kubectl"

--- a/roles/abm-install/templates/cluster-config.yaml.j2
+++ b/roles/abm-install/templates/cluster-config.yaml.j2
@@ -34,6 +34,7 @@ spec:
       {% endfor %}
   # Cluster networking configuration
   clusterNetwork:
+    multipleNetworkInterfaces: true
     pods:
       cidrBlocks:
       - {{ pod_cidr }}
