--- a/roles/ready-ubuntu/templates/stackdriver-agent.j2
+++ b/roles/ready-ubuntu/templates/stackdriver-agent.j2
@@ -32,7 +32,13 @@ COLLECTDMON=/opt/stackdriver/collectd/sbin/stackdriver-collectdmon
 CONFIG=/etc/stackdriver/collectd.conf
 _PIDFILE=/var/run/stackdriver-agent.pid
 
-GOOGLE_APPLICATION_CREDENTIALS="{{ remote_gsa_key }}/{{ (service_accounts | selectattr('name', 'equalto', 'abm-cloud-operations-agent') | first ).keyfile }}"
+
+
+echo $GOOGLE_APPLICATION_CREDENTIALS
+
+export GOOGLE_APPLICATION_CREDENTIALS="{{ remote_gsa_key }}/{{ (service_accounts | selectattr('name', 'equalto', 'abm-cloud-operations-agent') | first ).keyfile }}"
+
+
 
 JAVA_LIB_DIR=""
 
