--- a/roles/ready-ubuntu/templates/google-fluentd.conf.j2
+++ b/roles/ready-ubuntu/templates/google-fluentd.conf.j2
@@ -15,18 +15,6 @@
   @type prometheus_monitor
 </source>
 
-# <source>
-#   @type tail
-
-#   # Parse the timestamp, but still collect the entire line as 'message'
-#   format syslog
-
-#   path /var/log/syslog,/var/log/messages
-#   pos_file /var/lib/google-fluentd/pos/syslog.pos
-#   read_from_head true
-#   tag syslog
-# </source>
-
 # Analyze config usage and report to Stackdriver.
 <filter **>
   @type analyze_config
@@ -84,8 +72,8 @@
   monitoring_type opencensus
 
   # Set the VM ID
-  vm_id {{ '_'.join((cluster_name, cluster_index|string, 10000|random(seed=cluster_name)|string)) }}
-  vm_name {{ cluster_name }}
+  vm_name {{ '_'.join((cluster_name, cluster_index|string, 10000|random(seed=cluster_name)|string)) }}
+  vm_id {{ cluster_name }}
   zone {{ google_zone }}
-  project {{ google_project_id }}
+  project_id {{ google_project_id }}
 </match>
