--- a/roles/abm-post-install/templates/google-fluentd.conf.j2
+++ b/roles/abm-post-install/templates/google-fluentd.conf.j2
@@ -72,8 +72,8 @@
   monitoring_type opencensus
 
   # Set the VM ID
-  vm_name {{ '_'.join((cluster_name, cluster_index|string, 10000|random(seed=cluster_name)|string)) }}
-  vm_id {{ cluster_name }}
+  vm_name {{ '_'.join((machine_label|string, 10000|random(seed=cluster_name)|string)) }}
+  vm_id {{ machine_label }}
   zone {{ google_zone }}
   project_id {{ google_project_id }}
 </match>
