--- a/roles/abm-software/templates/longhorn-default-setting.yml.j2
+++ b/roles/abm-software/templates/longhorn-default-setting.yml.j2
@@ -21,7 +21,7 @@ data:
     storage-minimal-available-percentage:
     upgrade-checker:
     default-replica-count:
-    default-data-locality:
+    default-data-locality: best-effort
     guaranteed-engine-cpu:
     default-longhorn-static-storage-class:
     backupstore-poll-interval:
