--- a/roles/abm-software/templates/longhorn-default-setting.yml.j2
+++ b/roles/abm-software/templates/longhorn-default-setting.yml.j2
@@ -4,6 +4,7 @@ metadata:
   name: longhorn-system
 
 ---
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -17,12 +18,12 @@ data:
     create-default-disk-labeled-nodes:
     default-data-path: /customer
     replica-soft-anti-affinity:
+    replica-auto-balance:
     storage-over-provisioning-percentage:
     storage-minimal-available-percentage:
     upgrade-checker:
     default-replica-count:
     default-data-locality: best-effort
-    guaranteed-engine-cpu:
     default-longhorn-static-storage-class:
     backupstore-poll-interval:
     taint-toleration:
@@ -32,7 +33,6 @@ data:
     auto-delete-pod-when-volume-detached-unexpectedly:
     disable-scheduling-on-cordoned-node:
     replica-zone-soft-anti-affinity:
-    volume-attachment-recovery-policy: immediate
     node-down-pod-deletion-policy: delete-both-statefulset-and-deployment-pod
     allow-node-drain-with-last-healthy-replica:
     mkfs-ext4-parameters:
@@ -46,3 +46,4 @@ data:
     backing-image-cleanup-wait-interval:
     guaranteed-engine-manager-cpu:
     guaranteed-replica-manager-cpu:
+    #volume-attachment-recovery-policy: immediate
