Upgrade to longhorn ve 1.2.2

--- a/roles/abm-software/templates/longhorn-default-setting.yml.j2
+++ b/roles/abm-software/templates/longhorn-default-setting.yml.j2
@@ -38,12 +38,14 @@ data:
     mkfs-ext4-parameters:
     disable-replica-rebuild:
     replica-replenishment-wait-interval:
+    concurrent-replica-rebuild-per-node-limit:
     disable-revision-counter:
     system-managed-pods-image-pull-policy:
     allow-volume-creation-with-degraded-availability:
     auto-cleanup-system-generated-snapshot:
     concurrent-automatic-engine-upgrade-per-node-limit:
     backing-image-cleanup-wait-interval:
+    backing-image-recovery-wait-interval:
     guaranteed-engine-manager-cpu:
     guaranteed-replica-manager-cpu:
     #volume-attachment-recovery-policy: immediate
