--- a/roles/abm-software/templates/root-sync.yaml.j2
+++ b/roles/abm-software/templates/root-sync.yaml.j2
@@ -16,7 +16,8 @@ spec:
     {# Authentication of type "gcpserviceaccount" needs to also provide the GSA email address for the GSA setup to communicate to the GSR #}
     {% if root_repository_git_auth_type == "gcpserviceaccount" %}
     gcpServiceAccountEmail: "{{ root_repository_service_account_email }}"
-    {% else %} {# GSR method does not need a secret reference, all others does #}
+    {% else %}{# GSR method does not need a secret reference, all others does #}
+    # Secret Reference
     secretRef:
       name: "{{ root_repository_git_secret_name }}"
     {% endif %}
