--- a/roles/abm-software/templates/config-management.yaml.j2
+++ b/roles/abm-software/templates/config-management.yaml.j2
@@ -7,7 +7,7 @@ spec:
   # Unique across all clusters using the same ConfigSync repo. Name is used in Cluster Selectors
   clusterName: {{ acm_cluster_name }}
   enableMultiRepo: true
-  preventDrift: true # enable admission hook
+  preventDrift: false # enable admission hook
   policyController:
     enabled: true
     # exemptableNamespaces: ["default"]
