--- a/roles/abm-software/templates/ang-multi-cluster-connect-config.yaml.j2
+++ b/roles/abm-software/templates/ang-multi-cluster-connect-config.yaml.j2
@@ -1,32 +1,38 @@
+{% if egress_cluster_ip is defined %}
 apiVersion: networking.gke.io/v1alpha1
 kind: MultiClusterConnectivityConfig
 metadata:
-  name: default
-  namespace: anet-system
+  name: mcc-edge-config
+  namespace: kube-system
 spec:
   asns:
-    peer: 10201
-    self: 10202
+    peer: 65534
+    self: 65533
   tunnels:
   - ikeKey:
-      name: ike-key1
-      namespace: anet-system
+      name: ike-key
+      namespace: kube-system
     peer:
       bgpIP: 169.254.0.1
-      privateIP: 35.242.54.192 # GCP VPN IP
-      publicIP: 35.242.54.192 # GCP VPN IP
+      privateIP: {{ vpn_gateway_ips[0] }} # GCP Gateway IP 1
+      publicIP: {{ vpn_gateway_ips[0] }} # GCP Gateway IP 1
     self:
       bgpIP: 169.254.0.2
-      privateIP: {{ network_gateway_group_ips[0] }}  # Floating IP
-      publicIP: 104.134.28.8 # NAT IP
+      privateIP: {{ ang_floating_ips[0] }}  # Floating IP
+      publicIP: {{ egress_cluster_ip }} # "public IP or NAT IP of packets leaving edge cluster"
+  {% if vpn_gateway_ips|length > 1 %}
+  # Second Tunnel
   - ikeKey:
-      name: ike-key2
-      namespace: anet-system
+      name: ike-key
+      namespace: kube-system
     peer:
-      bgpIP: 169.254.0.9
-      privateIP: 35.220.53.24 # GCP VPN IP
-      publicIP: 35.220.53.24 # GCP VPN IP
+      bgpIP: 169.254.0.3
+      privateIP: {{ vpn_gateway_ips[1] }}
+      publicIP: {{ vpn_gateway_ips[1] }}
     self:
-      bgpIP: 169.254.0.10
-      privateIP: {{ network_gateway_group_ips[1] }} # Floating IP
-      publicIP: 104.134.28.9 # NAT IP
+      bgpIP: 169.254.0.4
+      privateIP: {{ ang_floating_ips[1] }} # Floating IP
+      publicIP: {{ egress_cluster_ip }}
+  {% endif %}
+
+{% endif %}
