--- a/roles/abm-software/templates/network-gateway-group.yaml.j2
+++ b/roles/abm-software/templates/network-gateway-group.yaml.j2
@@ -5,6 +5,6 @@ metadata:
   namespace: kube-system
 spec:
   floatingIPs:
-  {% for range in network_gateway_group_ips %}
+  {% for range in ang_floating_ips %}
   - {{ range }}
   {% endfor %}
