upgrade longhorn, external secret, abm
Change-Id: I083dd3a2e0ac1ac5f896aa686d772f30c6917f1c

--- a/roles/abm-software/templates/longhorn-default-setting.yml.j2
+++ b/roles/abm-software/templates/longhorn-default-setting.yml.j2
@@ -13,7 +13,7 @@ metadata:
 data:
   default-setting.yaml: |-
     backup-target: s3://abm-edge-backup-{{ google_project_id }}@us/{{ acm_cluster_name }}
-    backup-target-credential-secret:
+    backup-target-credential-secret: gcp-cloud-storage-backup-secret
     allow-recurring-job-while-volume-detached:
     create-default-disk-labeled-nodes:
     default-data-path: /customer
@@ -46,4 +46,4 @@ data:
     backing-image-cleanup-wait-interval:
     guaranteed-engine-manager-cpu:
     guaranteed-replica-manager-cpu:
-    orphan-auto-deletion:
+    # orphan-auto-deletion:
