exposing direct multus to config and setting flag to avoid vmruntime
Change-Id: I579c42ac02ff66d5f1747f5b396dd5f3e84c2360

--- a/roles/abm-install/templates/cluster-config.yaml.j2
+++ b/roles/abm-install/templates/cluster-config.yaml.j2
@@ -15,8 +15,6 @@ apiVersion: baremetal.cluster.gke.io/v1
 kind: Cluster
 metadata:
   name: {{ cluster_name }}
-  annotations:
-    baremetal.cluster.gke.io/enable-anthos-multi-cluster-connectivity: "{{ enable_mcc_network | default('false', true) | lower }}"
   namespace: {{ cluster_name }}
 spec:
   type: {{ install_type }}
@@ -43,7 +41,7 @@ spec:
     multipleNetworkInterfaces: {{ multi_network_enabled | capitalize  }}
     # eBPF
     # enableDataplaneV2: {{ dataplane_v2 | capitalize }}
-    # Network Gateway Groups
+    # Network Gateway Groups (Used for HA VPN)
     advancedNetworking: {{ network_gateway_group | capitalize  }}
     pods:
       cidrBlocks:
