refactor to one folder, fix remove and update hub ACM installation
Change-Id: Ieeb9390077b8e1c4503310680290f647c5a40eca
Bug: 257135264

--- a/roles/abm-software/templates/root-sync.yaml.j2
+++ b/roles/abm-software/templates/root-sync.yaml.j2
@@ -1,10 +1,10 @@
 #jinja2: lstrip_blocks: "True", trim_blocks: "True"
 
 # root-sync.yaml
-apiVersion: configsync.gke.io/v1alpha1
+apiVersion: configsync.gke.io/v1beta1
 kind: RootSync
 metadata:
-  name: root-sync
+  name: "{{ primary_root_sync_name }}"
   namespace: config-management-system
 spec:
   sourceFormat: hierarchy
