chore: update control_plane_ip to node_ip
Change-Id: If9a0afde967e8a2f7295539b55c0f143f0133d39

--- a/roles/abm-install/templates/cluster-config.yaml.j2
+++ b/roles/abm-install/templates/cluster-config.yaml.j2
@@ -33,7 +33,7 @@ spec:
   controlPlane:
     nodePoolSpec:
       nodes:
-      {% for ipaddr in control_plane_ips %}
+      {% for ipaddr in peer_node_ips %}
       - address: {{ ipaddr }}
       {% endfor %}
   # Cluster networking configuration
