--- a/roles/ansible-pull/templates/ansible-pull-all.yaml.j2
+++ b/roles/ansible-pull/templates/ansible-pull-all.yaml.j2
@@ -5,7 +5,7 @@ cluster_name: "{{ cluster_name }}"
 # Used for logging/metrics
 machine_label: "{{ machine_label }}"
 # This machine's IP address
-machine_ip: "{{ control_plane_ip }}"
+machine_ip: "{{ node_ip }}"
 
 # GitHub or GitLab Read-only User Token (authentication to private repos)
 scm_token_user: "{{ scm_token_user }}"
