--- a/roles/ready-ubuntu/templates/ssh-config.j2
+++ b/roles/ready-ubuntu/templates/ssh-config.j2
@@ -1,5 +1,5 @@
 {# ssh -o StrictHostKeyChecking=no "$user@$host" #}
-Host {{ control_plane_ip.split('.')[0] }}.{{ control_plane_ip.split('.')[1] }}.{{ control_plane_ip.split('.')[2] }}.*
+Host {{ node_ip.split('.')[0] }}.{{ node_ip.split('.')[1] }}.{{ node_ip.split('.')[2] }}.*
     User {{ abm_install_user }}
     Port 22
     StrictHostKeyChecking no
