generiziced SDS, added robin to option, clean code
Change-Id: I41ed744c98cee1ecd49f7e4992cb5d3b70486f2a

--- a/roles/abm-install/templates/cluster-config.yaml.j2
+++ b/roles/abm-install/templates/cluster-config.yaml.j2
@@ -1,10 +1,10 @@
 #jinja2: lstrip_blocks: "True", trim_blocks: "True"
 
 sshPrivateKeyPath: {{ ssh_key_path }} # Created for access to worker nodes
-gcrKeyPath: {{ remote_gsa_key }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-gcr-agent') | first ).keyfile }}
-gkeConnectAgentServiceAccountKeyPath: {{ remote_gsa_key }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-gke-connect-agent') | first ).keyfile }}
-gkeConnectRegisterServiceAccountKeyPath: {{ remote_gsa_key }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-gke-register-agent') | first ).keyfile }}
-cloudOperationsServiceAccountKeyPath: {{ remote_gsa_key }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-ops-agent') | first ).keyfile }}
+gcrKeyPath: {{ remote_keys_folder }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-gcr-agent') | first ).keyfile }}
+gkeConnectAgentServiceAccountKeyPath: {{ remote_keys_folder }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-gke-connect-agent') | first ).keyfile }}
+gkeConnectRegisterServiceAccountKeyPath: {{ remote_keys_folder }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-gke-register-agent') | first ).keyfile }}
+cloudOperationsServiceAccountKeyPath: {{ remote_keys_folder }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-ops-agent') | first ).keyfile }}
 ---
 apiVersion: v1
 kind: Namespace
