--- a/roles/abm-post-install/templates/stackdriver-agent.j2
+++ b/roles/abm-post-install/templates/stackdriver-agent.j2
@@ -32,7 +32,7 @@ COLLECTDMON=/opt/stackdriver/collectd/sbin/stackdriver-collectdmon
 CONFIG=/etc/stackdriver/collectd.conf
 _PIDFILE=/var/run/stackdriver-agent.pid
 
-export GOOGLE_APPLICATION_CREDENTIALS="{{ remote_gsa_key }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-ops-agent') | first ).keyfile }}"
+export GOOGLE_APPLICATION_CREDENTIALS="{{ remote_keys_folder }}/{{ (service_accounts | selectattr('id', 'equalto', 'abm-ops-agent') | first ).keyfile }}"
 
 JAVA_LIB_DIR=""
 
