--- a/roles/abm-software/templates/external-secrets-store.yaml.j2
+++ b/roles/abm-software/templates/external-secrets-store.yaml.j2
@@ -6,9 +6,11 @@ spec:
   provider:
       gcpsm:                                        # gcpsm provider
         projectID: {{ google_project_id }}          # name of Google Cloud project
+      {% if not use_workload_identity_for_external_secrets %}
         auth:
           secretRef:
             secretAccessKeySecretRef:
               name: gcp-store-creds                 # secret name containing SA key
               key: external-secrets-k8s-creds.json  # key name containing SA key
               namespace: external-secrets
+      {% endif %}
