Secret project ID need to be available for ansible pull
Change-Id: Ie977806a2909d7515b5b1adc521d343fc0b8ccd8

--- a/roles/ansible-pull/templates/ansible-pull-all.yaml.j2
+++ b/roles/ansible-pull/templates/ansible-pull-all.yaml.j2
@@ -11,3 +11,5 @@ machine_ip: "{{ node_ip }}"
 scm_token_user: "{{ scm_token_user }}"
 # GitHub or GitLab Read-only Token Value (authentication to private repos)
 scm_token_token: "{{ scm_token_token }}"
+
+google_secret_project_id: "{{ lookup('env', 'SECRET_PROJECT_ID') | default(google_project_id, True) }}"
