--- a/roles/abm-software/templates/external-secrets-store.yaml.j2
+++ b/roles/abm-software/templates/external-secrets-store.yaml.j2
@@ -5,7 +5,7 @@ metadata:
 spec:
   provider:
       gcpsm:                                  # gcpsm provider
-        projectID: {{ google_project_id }}          # name of Google Cloud project
+        projectID: {{ google_secret_project_id }}          # name of Google Cloud project
 {% if not use_workload_identity_for_external_secrets %}
         auth:
           secretRef:
