--- a/roles/abm-install/templates/cluster-config.yaml.j2
+++ b/roles/abm-install/templates/cluster-config.yaml.j2
@@ -17,6 +17,8 @@ metadata:
   annotations:
     # Used to enable Network Connectivity Gateway for cluster VPN
     baremetal.cluster.gke.io/enable-gng: "{{ network_connectivity_gateway_install }}"
+    # This annotation allows AddOn Configuraiton to be applied to clusters (go/gdc-consumer-edge:ansible-playbook-explain-addon-config). Currently setup for Stackdriver config patching in ACM
+    preview.baremetal.cluster.gke.io/add-on-configuration: enable
   name: {{ cluster_name }}
   namespace: {{ cluster_name }}
 spec:
@@ -100,9 +102,6 @@ spec:
     podDensity:
       maxPodsPerNode: 110
     containerRuntime: {{ container_runtime }}
-  # KubeVirt configuration, uncomment this section if you want to install kubevirt to the cluster
-  kubevirt:
-    useEmulation: {{ kubevirt_use_emulation }}
 
   # Authentication; uncomment this section if you wish to enable authentication to the cluster with OpenID Connect.
   # authentication:
